<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.miu.cvbuilder.views.main.MainFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_experience"
        android:name="com.miu.cvbuilder.views.aboutme.fragments.ExperienceFragment"
        android:label="Professional Experience"
        tools:layout="@layout/fragment_experience" />

    <fragment
        android:id="@+id/nav_to_other"
        android:name="com.miu.cvbuilder.views.other.GetInTouchFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_getintouch" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.miu.cvbuilder.views.gallery.GalleryFragment"
        android:label="@string/fun_fact"
        tools:layout="@layout/fragment_gallery" />

</navigation>